# Note that configure will define @XMONDO@ to be "xmondo" if X support
# is enabled, "" if not
SUBDIRS        = common mondoarchive mondorestore @XMONDO@ restore-scripts post-nuke.sample
DIST_SUBDIRS   = common mondoarchive mondorestore xmondo restore-scripts post-nuke.sample

pkglib_DATA   = do-not-compress-these autorun
