##
## Process this file with Automake to generate `Makefile.in'
##
AM_CPPFLAGS = -DMONDO_SHARE=\"$(pkgdatadir)\"

## libmondo
noinst_LIBRARIES = libmondo.a

libmondo_a_SOURCES  = libmondo-archive.c libmondo-devices.c libmondo-fifo.c \
                       libmondo-filelist.c libmondo-files.c libmondo-fork.c \
                       libmondo-mountlist.c libmondo-raid.c \
                       libmondo-stream.c libmondo-string.c libmondo-tools.c \
                       libmondo-verify.c newt-specific.c \
					   libmondo-archive.h libmondo-devices.h \
                       libmondo-filelist.h libmondo-files.h libmondo-fork.h \
                       libmondo-mountlist.h libmondo-raid.h \
                       libmondo-stream.h libmondo-string.h libmondo-tools.h \
                       libmondo-verify.h libmondo-fifo.h \
                       libmondo-archive-EXT.h my-stuff.h mondostructures.h \
                       libmondo-devices-EXT.h libmondo-fifo-EXT.h \
                       libmondo-files-EXT.h libmondo-fork-EXT.h \
					   libmondo-filelist-EXT.h \
                       libmondo-mountlist-EXT.h libmondo-raid-EXT.h  \
                       libmondo-string-EXT.h libmondo-tools-EXT.h \
					   libmondo-verify-EXT.h  libmondo-stream-EXT.h \
                       newt-specific.h
