restoremondodir      = $(pkgdatadir)/restore-scripts/mondo
restoremondo_SCRIPTS = ISO ask-me-a-question compare-me compare-subroutine-me \
                       edit-mountlist grub-MR hack-fstab hack-grub hack-lilo hack-elilo \
                       ide-opt ide-opt-off label-partitions-as-necessary \
                       make-me-bootable mount-me mount-subroutine-me raw-MR \
                       restore-bigfiles-from-iso stabgrub-me stablilo-me stabelilo-me \
                       stabraw-me unmount-me unmount-subroutine-me
