docdir              = $(datadir)/doc/mondo-@PACKAGE_VERSION@
dist_doc_DATA       = aboutthisguide.html acknowledgements.html backup.html backupcommands.html \
                      backuptrying.html compare.html faq.html faqbackup.html \
                      faqbooting.html faqcompare.html faqgeneral.html faqhardwarerelated.html \
                      faqhugo.html faqinstallation.html faqoverview.html faqrestore.html \
                      feedback.html hardwarerequirements.html history.html index.html \
                      installation.html kernelmodules.html kernelsupport.html linuxbackup.html \
                      linuxpackages.html makeminditestcd.html mindiinstallation.html \
                      mindilinux.html mondoinstallation.html mondorescue.html overview.html \
                      purpose.html quickstart.html restore.html restoreoverview.html \
                      restoretips.html systemrequirements.html testingmindi.html \
                      version.html windowsbackup.html \
                      writingminditestcd.html ## Mondo-Rescue-Mindi-Linux-HOWTO.pdf Mondo-Rescue-Mindi-Linux-HOWTO.txt

docimgdir           = $(docdir)/images
dist_docimg_DATA    = images/1-mini.png images/1.png images/10cd-mini.png \
                      images/10cd.png \
                      images/3-mini.png images/3.png \
                      images/4.png images/5tape-mini.png images/5tape.png \
                      images/maburnproof-mini.png images/maburnproof.png \
                      images/macompression-mini.png images/macompression.png \
                      images/maexclude-mini.png images/maexclude.png images/mainclude-mini.png images/mainclude.png \
                      images/makernel-mini.png images/makernel.png images/mamain-mini.png \
                      images/mamain.png images/maproceedq-mini.png images/maproceedq.png \
                      images/maverifyq-mini.png images/maverifyq.png images/rest1-mini.png \
                      images/rest1.png images/rest2-mini.png images/rest2.png \
                      images/rest3-mini.png images/rest3.png images/rest4-mini.png \
                      images/rest4.png images/rest5-mini.png images/rest5.png \
                      images/rest6-mini.png images/rest6.png
